test_files/fails/t_adv_lamda_delay.ar
let f = \(x: int later) -> delay(\y -> adv x);

console <- 1 :: never;